Bump vtp til java 17 (#834)